src/objects/ParametersSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is to config the parameters in the url</description>
    <fields>
        <fullName>FieldApiName__c</fullName>
        <description>This field is the Api Name of the parameter. For example MyParameter1__c</description>
        <label>Field Api Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LookupRelationship__c</fullName>
        <label>Lookup Relationship (Api Name)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectApiName__c</fullName>
        <description>This field is the Object Api Name of the parameter. For example Contact.</description>
        <label>Object Api Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parameter__c</fullName>
        <description>This field is the name of the parameter in the url. For example Parameter1</description>
        <label>Parameter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Parameters Settings</label>
    <listViews>
        <fullName>AllCustom</fullName>
        <columns>NAME</columns>
        <columns>Parameter__c</columns>
        <columns>ObjectApiName__c</columns>
        <columns>FieldApiName__c</columns>
        <columns>LookupRelationship__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Custom</label>
        <language>en_US</language>
    </listViews>
</CustomObject>